# iam_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  api.py  config.py  env.yaml.example  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 67fe80c367d7_initial_iam_schema.py
src/: depends.py
src/adapter/repositories/: audit_event_repository.py  invitation_repository.py  membership_repository.py  password_reset_token_repository.py  session_repository.py  tenant_repository.py  user_repository.py
src/adapter/services/: unit_of_work.py
src/api/: app.py  error.py
src/api/routes/: admin.py  audit.py  auth.py  health_check.py  invitation.py  sessions.py  tenant.py  user.py
src/api/utils/: admin_auth.py  jwt.py
src/app/repositories/: audit_event_repository.py  invitation_repository.py  membership_repository.py  password_reset_token_repository.py  session_repository.py  tenant_repository.py  user_repository.py
src/app/services/: unit_of_work.py
src/app/use_cases/: __init__.py
src/domain/: base.py  entities.py
src/domain/entities/: __init__.py  audit_event.py  enums.py  invitation.py  membership.py  password_reset_token.py  session.py  tenant.py  user.py
tests/fixtures/: json_loader.py
tests/integration/: conftest.py
tests/integration/api/: test_accept_invitation.py  test_audit_events.py  test_cancel_tenant_deletion.py  test_change_role.py  test_confirm_password_reset.py  test_delete_tenant.py  test_health_check.py  test_invite_user.py  test_login.py  test_me.py  (+10 more)
tests/unit/: conftest.py
tests/utils/: json_compare.py
(+43 files in other folders)
